# percolator-launch

./: .dockerignore  .env.example  .env.local  .env.vercel  .gitignore  API_AUDIT_REPORT.md  API_AUDIT_SUMMARY.md  AUDIT-BACKEND.md  AUDIT-PAGES.md  AUDIT-TRADE.md  AUDIT_COMPLETION_SUMMARY.md  BACKEND_AUDIT_REPORT.md  BACKEND_TESTS_SUMMARY.md  BUGS-FOUND.md  BUG_BOUNTY_BALANCE_DISPLAY.md  BUG_BOUNTY_SHARPMETA.md  BUG_BOUNTY_SHARPMETAA_BACKEND.md  BUG_BOUNTY_SHARPMETA_2.md  BUG_BOUNTY_VERIFICATION.md  CHANGELOG.md  CONTRIBUTING-AGENTS.md  DEPLOYMENT-STATUS-FEB14-1950.md  Dockerfile  Dockerfile.api  Dockerfile.indexer  Dockerfile.oracle-keeper  Dockerfile.sim  FRONTEND_FIXES_SUMMARY.md  FRONTEND_POLISH_SUMMARY.md  FUNDING-BACKEND-DAY1-COMPLETE.md  FUNDING-DAY1-SUMMARY.md  FUNDING-RATES-DISCOVERED.md  FUNDING-RATES-IMPLEMENTATION.md  HIDDEN-FEATURES-ANALYSIS.md  HIDDEN-FEATURES-DISCOVERED.md  HISTORY_FIX_SUMMARY.md  HOOK_TESTS_COMPLETE.md  LICENSE  MIGRATION_007_REPORT.md  P-MED-PART1-COMPLETION-REPORT.md  (+60 more)
app/: .env.example  .env.local.example  instrumentation.ts  middleware.ts  next.config.ts  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
config/: sim-bot-wallets.json  sim-markets.json
docs/: ARCHITECTURE.md  BACKEND-ARCHITECTURE.md  DEPLOYMENT.md  FULL-AUDIT-FEB8.md  INSURANCE-LP-LOCKUP-RESEARCH.md  INSURANCE-LP-SPEC.md  KANI-AUDIT.md  KEY-ROTATION.md  LP-VAULT-REPORT-2026-02-28.md  MAINNET-READINESS.md  MAINNET-ROADMAP.md  MIDTERM-COMPARISON.md  PERC-267-on-chain-primitives-brainstorm.md  PR15-BUG-AUDIT.md  PR3-PROG-BUG-AUDIT.md  PRODUCTION-AUDIT.md  SIMULATION_DASHBOARD_FIX.md  SIMULATOR-HANDOFF.md  SIMULATOR-INVESTIGATION.md  SIMULATOR-SPEC.md  UI-REVAMP-PLAN.md  UX-AUDIT-FEB9.md  audit.md  kani-proof-audit.md
e2e/: .gitkeep  create-market.spec.ts  devnet-mint.spec.ts  faucet-and-utilities.spec.ts  helpers.ts  liquidation.spec.ts  market-listing.spec.ts  page-loads.spec.ts  responsive.spec.ts  security-headers.spec.ts  trade-page.spec.ts  trade.spec.ts  wallet-connect.spec.ts  wallet.spec.ts
mocks/: browser.ts  handlers.ts  server.ts
percolator/: Cargo.toml  README.md  audit.md  kani_audit_full.tsv  spec.md
percolator/src/: percolator.rs
percolator/tests/: amm_tests.rs  fuzzing.rs  kani.rs  unit_tests.rs
program/: .gitignore  BUILD.md  Cargo.toml  README.md  audit.md
program/src/: percolator.rs  tags.rs
program/tests/: cu_benchmark.rs  i128_alignment.rs  insurance_lp_tests.rs  integration.rs  kani.rs  unit.rs
research/: SIMPLE-risk-engine-summary.md  brainstorm-ideas.md  (+1 more)
(+567 files in other folders)
