[package]
name = "percolator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "percolator"
path = "src/percolator.rs"

[dependencies]
# No runtime dependencies - pure no_std compatible library

[dev-dependencies]
proptest = "1.4"

[features]
default = []
test = []    # Use MAX_ACCOUNTS=64 (~0.17 SOL rent)
small = []   # Use MAX_ACCOUNTS=256 (~0.68 SOL rent)
medium = []  # Use MAX_ACCOUNTS=1024 (~2.7 SOL rent)
# No feature = MAX_ACCOUNTS=4096 (~6.9 SOL rent)
fuzz = []    # Enable fuzzing tests

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true

[profile.sbf]
inherits = "release"
panic = "abort"

[workspace.metadata.kani]
flags = { tests = true }
unstable = { stubbing = true }

[[workspace.metadata.kani.proof]]
harness = ".*"
unwind = 70
