[package]
name = "percolator-prog"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/dcccrypto/percolator-launch"

[lib]
crate-type = ["cdylib", "lib"]
name = "percolator_prog"
path = "src/percolator.rs"

[features]
default = []
mainnet = []                    # Mainnet build — enables compile-time guards against test/devnet features
no-entrypoint = []
test-sbf = []
devnet = []                     # Relaxes oracle staleness/confidence checks — NEVER use with mainnet!
test = ["percolator/test"]      # MAX_ACCOUNTS=64 (~0.17 SOL)
small = ["percolator/small"]    # MAX_ACCOUNTS=256 (~0.68 SOL)
medium = ["percolator/medium"]  # MAX_ACCOUNTS=1024 (~2.7 SOL)
cu-audit = []                   # Enable compute unit checkpoints for CU auditing
unsafe_close = []               # TEST-ONLY: Skip all validation in CloseSlab instruction — NEVER use on mainnet!

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
percolator = { path = "../percolator" }
# NOTE: pinocchio, pyth-sdk-solana, arrayref, num-derive, num-traits, thiserror
# were removed — not used in source code.

# Pin crates that use edition2024 manifests (incompatible with cargo-build-sbf's cargo 1.79)
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

[dev-dependencies]
bincode = "1"
solana-sdk = "1.18"
solana-client = "1.18"
rand = "0.8"
rand_xorshift = "0.3"
proptest = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
litesvm = "0.1"
shellexpand = "3"
serde_json = "1"
